fix clinput dropdown on mobile
it overflowed on the right side

--- a/ui/cli/css/_clinput.scss
+++ b/ui/cli/css/_clinput.scss
@@ -25,6 +25,9 @@
 #top.clinput {
   @include breakpoint($mq-not-x-large) {
     #topnav { display: none }
+    #clinput {
+      width: 80vw;
+    }
   }
   @include breakpoint($mq-not-x-small) {
     .site-title { display: none }
